fixed the page layout problems i had created with my main content on other pages when i made the carousel

--- a/css/application.css
+++ b/css/application.css
@@ -109,6 +109,10 @@ html, body {
   display: inline;
   width: 35%; }
 
+.main-content {
+  width: 100%;
+  height: 620px; }
+
 .title-div {
   display: block;
   width: 190px;
