--- a/sass/layouts/_containers.scss
+++ b/sass/layouts/_containers.scss
@@ -36,7 +36,14 @@
 	
 }
 
-
+.main-content{
+ 
+ 	
+ 	width:100%;
+ 	height:620px;
+ 	
+ 
+ }
 
 .title-div{
 	display:block;
